# rosidl_protozero

./: .gitignore  .gitmodules  README.md
rosidl_protozero_adapter/: CMakeLists.txt  package.xml  rosidl_protozero_adapter-extras.cmake.in  setup.cfg
rosidl_protozero_adapter/cmake/: register_adapter.cmake  rosidl_protozero_adapt_interfaces.cmake
rosidl_protozero_adapter/proto/rosidl_protozero/: options.proto
rosidl_protozero_adapter/resource/: msg.idl.em  msg_stamped.idl.em  struct.idl.em  struct__constants.idl.em  struct__field.idl.em  struct__stamped.idl.em
rosidl_protozero_adapter/rosidl_protozero_adapter/: __init__.py  __main__.py  _deduce_idl_type.py  _idl_naming_convention.py  _main.py  _translate.py  utils.py
rosidl_protozero_adapter/rosidl_protozero_adapter/command/: __init__.py  _proto2idl.py
rosidl_protozero_cmake/: CMakeLists.txt  package.xml  rosidl_protozero_cmake-extras.cmake
rosidl_protozero_cmake/cmake/: rosidl_protozero_cmake-extras.cmake.in  rosidl_protozero_cmake_package_hook.cmake  rosidl_protozero_convert_case_style.cmake  rosidl_protozero_generate_interfaces.cmake  rosidl_protozero_package_hook.cmake  rosidl_protozero_write_generator_arguments.cmake
rosidl_protozero_generator_cpp/: CMakeLists.txt  package.xml  rosidl_protozero_generator_cpp-extras.cmake.in
rosidl_protozero_generator_cpp/cmake/: register_cpp.cmake  rosidl_protozero_generator_cpp_generate_interfaces.cmake
rosidl_protozero_generator_cpp/resource/: msg.hpp.em  msg__decode.hpp.em  msg__encode.hpp.em  msg__tags.hpp.em  rosidl_protozero_generator_cpp__visibility_control.hpp.in
rosidl_protozero_generator_cpp/rosidl_protozero_generator_cpp/: __init__.py  __main__.py  _cpp_naming_convention.py  _deduce_cpp_type.py  _generate.py  _list_generated.py  _main.py
rosidl_protozero_pycommon/: package.xml  setup.cfg  setup.py
rosidl_protozero_pycommon/rosidl_protozero_pycommon/: __init__.py  _case_style.py  _deduce_field_type.py  _filter_messages.py  _filter_tuples.py  _naming_convention.py  _template_context.py  utils.py
rosidl_protozero_pycommon/rosidl_protozero_pycommon/main/: __init__.py  case_style.py
rosidl_protozero_runtime/: CMakeLists.txt  package.xml
rosidl_protozero_runtime/include/builtin_interfaces/pbf/detail/: google_protobuf__duration__decode.hpp  google_protobuf__timestamp__decode.hpp  google_protobuf__timestamp__encode.hpp  google_protobuf__timestamp__tags.hpp
