<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_protozero_cmake</name>
  <version>0.1.0</version>
  <description>
    The CMake functionality to invoke code generation for ROS interface files.
  </description>
  <maintainer email="biaggi.alessandro.official@gmail.com">Alessandro Biaggi</maintainer>
  <license>Apache License 2.0</license>
  <author email="biaggi.alessandro.official@gmail.com">Alessandro Biaggi</author>

  <url type="repository">https://github.com/AlessandroBiaggi/rosidl_protozero</url>
  <url type="bugtracker">https://github.com/AlessandroBiaggi/rosidl_protozero/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>rosidl_protozero_adapter</buildtool_export_depend>
  <buildtool_export_depend>rosidl_protozero_pycommon</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
